--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homepage</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="main">
+      <div class = "container">
+        <div>
+          <div>
+            <img src="img_avatar.png" alt="Avatar">
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <img src="img_avatar.png" alt="Avatar">
+          </div>
+        </div>
+        
+        <div>
+          <div>
+            <img src="img_avatar.png" alt="Avatar">
+          </div>
+        </div>
+        <div>
+          <div>
+            <img src="img_avatar.png" alt="Avatar">
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
