--- a/index.html
+++ b/index.html
@@ -5,34 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="main">
-      <div class = "container">
-        <div>
-          <div>
-            <img src="img_avatar.png" alt="Avatar">
-          </div>
+      <div class="v-box">
+        <div class="title">
+          <h1>Our Team</h1>
         </div>
+        <div class="container">
+          <div class="image-box">
+            <img src="images/RenderedImage.jpg" alt="Avatar" />
+          </div>
 
-        <div>
           <div>
-            <img src="img_avatar.png" alt="Avatar">
+            <div class="image-box">
+              <img src="images/RenderedImage.jpg" alt="Avatar" />
+            </div>
           </div>
-        </div>
-        
-        <div>
+
           <div>
-            <img src="img_avatar.png" alt="Avatar">
+            <div class="image-box">
+              <img src="images/RenderedImage.jpg" alt="Avatar" />
+            </div>
           </div>
-        </div>
-        <div>
           <div>
-            <img src="img_avatar.png" alt="Avatar">
+            <div class="image-box">
+              <img src="images/RenderedImage.jpg" alt="Avatar" />
+            </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
