--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
         </div>
         <div class="container">
           <div class="image-box">
-            <img src="images/RenderedImage.jpg" alt="Avatar" />
+            <a href = "kyoshi.html">
+              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            </a>
           </div>
 
-          <div>
-            <div class="image-box">
-              <img src="images/RenderedImage.jpg" alt="Avatar" />
-            </div>
+          <div class="image-box">
+            <a href = "juan.html">
+              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            </a>
           </div>
 
-          <div>
-            <div class="image-box">
-              <img src="images/RenderedImage.jpg" alt="Avatar" />
-            </div>
+          <div class="image-box">
+            <a href = "keith.html">
+              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            </a>
           </div>
-          <div>
-            <div class="image-box">
-              <img src="images/RenderedImage.jpg" alt="Avatar" />
-            </div>
+          <div class="image-box">
+            <a href = "harvey.html">
+              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            </a>
           </div>
         </div>
       </div>
