--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         </div>
         <div class="container">
           <div class="image-box">
-            <a href = "kyoshi.html">
-              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            <a href = "Kyoshi/kyoshi.html">
+              <img src="images/Kyoshi/RenderedImage.jpg" alt="Avatar"/>
             </a>
           </div>
 
           <div class="image-box">
-            <a href = "juan.html">
-              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            <a href = "/Juan/juan.html">
+              <img src="images/Kyoshi/RenderedImage.jpg" alt="Avatar"/>
             </a>
           </div>
 
           <div class="image-box">
-            <a href = "keith.html">
-              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            <a href = "/Keith/keith.html">
+              <img src="images/Kyoshi/RenderedImage.jpg" alt="Avatar"/>
             </a>
           </div>
           <div class="image-box">
-            <a href = "harvey.html">
-              <img src="images/RenderedImage.jpg" alt="Avatar"/>
+            <a href = "Harvey/harvey.html">
+              <img src="images/Kyoshi/RenderedImage.jpg" alt="Avatar"/>
             </a>
           </div>
         </div>
