--- a/Kyoshi/kyoshi.html
+++ b/Kyoshi/kyoshi.html
@@ -10,23 +10,55 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="kyoshi-styles.css" />
 
     <title>Kyoshi</title>
   </head>
   <body>
-    <h1>Kyoshi</h1>
-    <div class="card" style="width: 18rem;">
-      <img src="images/Kyoshi/RenderedImage.jpg " class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Hello my name is Kyoshi Noda and I love to code on my free time and play some video games </p>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="../index.html">Our Team</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target=".dual-collapse2"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kyoshi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Juan</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Harvey</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Keith</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="center">
+      <div class="card" style="width: 18rem">
+        <img
+          src="/Kyoshi/images/RenderedImage.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <p class="card-text">
+            Hello my name is Kyoshi Noda and I love to code on my free time and
+            play some video games
+          </p>
+        </div>
       </div>
     </div>
-
-
-
-
-
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
