--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
           </div>
           <div class="image-box">
-            <a href = "Harvey/harvey.html">
+            <a href = "Harvey/harveyPage.html">
               <img src="Kyoshi/images/RenderedImage.jpg" alt="Avatar"/>
             </a>
           </div>
