--- a/Harvey/harveyPage.html
+++ b/Harvey/harveyPage.html
@@ -1,66 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title> Harvey Tseng </title>
+  <head>
+    <title>Harvey Tseng</title>
     <link rel = "stylesheet" href = "main.css"
-</head>
-<body style = "background-color: black;">
-
-    <div class = "nav">
-        <h1> Harvey Tseng
-        </h1>
+  </head>
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous"
+/>
+  <body style="background-color: black">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="../index.html">Our Team</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target=".dual-collapse2"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../Kyoshi/kyoshi.html">Kyoshi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Juan/juan.html">Juan</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Harvey/harveyPage.html">Harvey</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Keith/keith.html">Keith</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="nav">
+      <h1>Harvey Tseng</h1>
     </div>
 
-
-    <div style = "background-image: url(birdGif.gif)" class = "faceDiv">
-        <img class = "face" src = "harvey.jpg"/>
-        <p class = "description"> Harvey Tseng - League of Legends Masochist </p>
+    <div style="background-image: url(birdGif.gif)" class="faceDiv">
+      <img class="face" src="harvey.jpg" />
+      <p class="description">Harvey Tseng - League of Legends Masochist</p>
     </div>
 
-    <p class = "body"> I am a freshman in Farmingdale State College, majoring in CPIS. </p>
-    <p class = "body"> While I love to program, I also love Ornithology - the study of birds. Here are some of my favorite birds: </p>
+    <p class="body">
+      I am a freshman in Farmingdale State College, majoring in CPIS.
+    </p>
+    <p class="body">
+      While I love to program, I also love Ornithology - the study of birds.
+      Here are some of my favorite birds:
+    </p>
 
-    <audio src = "bird1.mp3" preload="auto" id = "bird1">
-    </audio>
+    <audio src="bird1.mp3" preload="auto" id="bird1"></audio>
 
     <a href="javascript:playSound('bird1')"></a>
 
-    <div class ="container">
-        <div class = "image">
-            <a href = "javascript.playSound('bird1');">
-            <img src = "waxwing.jpg" alt = "Cedar Waxwing">
-            </a>
-            <p class = "description"> Cedar Waxwing </p>
-        </div>
-        <div class = "image">
-            <img src = "bluejay.jpg" alt = "Blue Jay"/>
-            <p class = "description"> Blue Jay </p>
-        </div>
-        <div class = "image">
-            <img src = "shrike.jpg" alt = "Blue Jay"/>
-            <p class = "description"> Loggerhead Shrike </p>
-        </div>
-        <div class = "image">
-            <img src = "kingfisher.jpg" alt = "Blue Jay"/>
-            <p class = "description"> Crested Kingfisher </p>
-        </div>
+    <div class="container">
+      <div class="image">
+        <a href="javascript.playSound('bird1');">
+          <img src="waxwing.jpg" alt="Cedar Waxwing" />
+        </a>
+        <p class="description">Cedar Waxwing</p>
+      </div>
+      <div class="image">
+        <img src="bluejay.jpg" alt="Blue Jay" />
+        <p class="description">Blue Jay</p>
+      </div>
+      <div class="image">
+        <img src="shrike.jpg" alt="Blue Jay" />
+        <p class="description">Loggerhead Shrike</p>
+      </div>
+      <div class="image">
+        <img src="kingfisher.jpg" alt="Blue Jay" />
+        <p class="description">Crested Kingfisher</p>
+      </div>
     </div>
-
-
-    <div class = "container">
-        <div class = "nav">
-            <p> Home &emsp; </p>
-        </div>
-        <div class = "nav">
-            <p> Kiyoshi &emsp; </p>
-        </div>
-        <div class = "nav">
-            <p> Juan &emsp; </p>
-        </div>
-        <div class = "nav">
-            <p> Keith &emsp;</p>
-        </div>
-    </div>
-
-</body>
-</html> 
+  </body>
+</html>
