--- a/Kyoshi/kyoshi.html
+++ b/Kyoshi/kyoshi.html
@@ -30,16 +30,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Kyoshi</a>
+            <a class="nav-link" href="../Kyoshi/kyoshi.html">Kyoshi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Juan</a>
+            <a class="nav-link" href="../Juan/juan.html">Juan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Harvey</a>
+            <a class="nav-link" href="../Harvey/harveyPage.html">Harvey</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Keith</a>
+            <a class="nav-link" href="../Keith/keith.html">Keith</a>
           </li>
         </ul>
       </div>
