--- a/Juan/juan.html
+++ b/Juan/juan.html
@@ -1,79 +1,98 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
-	<title>Juan Farias</title>
-	<link
-	rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous"
-/>
-	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap" rel="stylesheet"> 
-</head>
-<body>
-
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-		<div class="mx-auto order-0">
-			<a class="navbar-brand mx-auto" href="../index.html">Our Team</a>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target=".dual-collapse2"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-		</div>
-		<div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="../Kyoshi/kyoshi.html">Kyoshi</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../Juan/juan.html">Juan</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../Harvey/harveyPage.html">Harvey</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../Keith/keith.html">Keith</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-	<div id="leaves">
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i>
-  <i></i> 
-</div>
-	<div id="main">
-		<div class="alignment">
-			<img class="doggyPic" src="doggy.jpg">
-		</div>
-		<section class="alignment">
-			<h2 class="fontstyle">JUAN FARIAS</h2>
-			<content>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta luctus maximus. Quisque aliquam sit amet libero a consectetur. Proin malesuada sapien vel metus rutrum, eu blandit magna elementum. Proin pharetra ornare urna, vitae ultricies enim vulputate sed. Nam eu faucibus neque. Vestibulum nec mauris dictum, facilisis nibh nec, bibendum tortor. Pellentesque bibendum eleifend libero, quis scelerisque risus posuere ac. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed eu elit ac arcu gravida porttitor. Duis non leo in ex finibus finibus. Maecenas non nulla a neque tincidunt venenatis id et mi. Donec vel accumsan purus. </p>
-			</content>
-			<audio controls autoplay>
-				<source src="soundclip.mp3" type="audio/mp3">
-			</audio>
-		</section>
-	</div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Juan Farias</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="../Kyoshi/kyoshi.html"
+                >Kyoshi <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="juan.html">Juan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Harvey/harveyPage.html">Harvey</a>
+            </li>
+						<li class="nav-item">
+              <a class="nav-link" href="../Keith/keith.html">Keith</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div id="main">
+      <div id="leaves">
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+      </div>
+      <div class="alignment">
+        <img class="doggyPic" src="doggy.jpg" />
+      </div>
+      <section class="alignment">
+        <h2 class="fontstyle">JUAN FARIAS</h2>
+        <content>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+            porta luctus maximus. Quisque aliquam sit amet libero a consectetur.
+            Proin malesuada sapien vel metus rutrum, eu blandit magna elementum.
+            Proin pharetra ornare urna, vitae ultricies enim vulputate sed. Nam
+            eu faucibus neque. Vestibulum nec mauris dictum, facilisis nibh nec,
+            bibendum tortor. Pellentesque bibendum eleifend libero, quis
+            scelerisque risus posuere ac. Orci varius natoque penatibus et
+            magnis dis parturient montes, nascetur ridiculus mus. Sed eu elit ac
+            arcu gravida porttitor. Duis non leo in ex finibus finibus. Maecenas
+            non nulla a neque tincidunt venenatis id et mi. Donec vel accumsan
+            purus.
+          </p>
+        </content>
+        <audio controls autoplay>
+          <source src="soundclip.mp3" type="audio/mp3" />
+        </audio>
+      </section>
+    </div>
+  </body>
 </html>
