--- a/Keith/keith.html
+++ b/Keith/keith.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Keith</title>
-</head>
-<body>
-  <h1>Keith</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="keith-styles.css" />
+
+    <title>Keith</title>
+  </head>
+
+  <body>
+    <div class="header">
+      <h1>FSC HACKATHON</h1>
+    </div>
+
+    <div class="face">
+      <img
+        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.T8sZBL6e7dnDLmcWHJ9A8AHaE8%26pid%3DApi&f=1&ipt=3af19421ede87a42abcea61b5d44721b603adaa54702724d686e778f8bf2a056&ipo=images"
+        alt="myface"
+        height="250"
+        width="300"
+        class="center"
+      />
+    </div>
+
+    <div class="flex-container">
+      <div></div>
+    </div>
+
+    <div class="introduction">
+      <h2>Keith</h2>
+    </div>
+
+    <button id="open-btn">
+      <p>About me</p>
+    </button>
+
+    <div id="model-container">
+      <div id="model">
+        <p>I like to play video games and eat pizza</p>
+
+        <div id="close-btn">&times;</div>
+      </div>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
