--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <body>
     <div class="main">
       <div class="v-box">
-        <div class="title">
           <h1>Our Team</h1>
-        </div>
         <div class="container">
           <div class="image-box">
             <a href = "Kyoshi/kyoshi.html">
@@ -22,18 +20,18 @@
 
           <div class="image-box">
             <a href = "/Juan/juan.html">
-              <img src="Kyoshi/images/RenderedImage.jpg" alt="Avatar"/>
+              <img src="./Juan/doggy.jpg" alt="Avatar"/>
             </a>
           </div>
 
           <div class="image-box">
-            <a href = "/Keith/keith.html">
-              <img src="Kyoshi/images/RenderedImage.jpg" alt="Avatar"/>
+            <a href = "/Harvey/harveyPage.html">
+              <img src = "Harvey/harvey.jpg"/>
             </a>
           </div>
           <div class="image-box">
-            <a href = "Harvey/harveyPage.html">
-              <img src="Kyoshi/images/RenderedImage.jpg" alt="Avatar"/>
+            <a href = "Keith/keith.html">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.T8sZBL6e7dnDLmcWHJ9A8AHaE8%26pid%3DApi&f=1&ipt=3af19421ede87a42abcea61b5d44721b603adaa54702724d686e778f8bf2a056&ipo=images" alt="Avatar"/>
             </a>
           </div>
         </div>
