--- a/Keith/keith.html
+++ b/Keith/keith.html
@@ -7,18 +7,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="keith-styles.css" />
 
     <title>Keith</title>
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="../index.html">Our Team</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target=".dual-collapse2"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../Kyoshi/kyoshi.html">Kyoshi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Juan/juan.html">Juan</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Harvey/harveyPage.html">Harvey</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Keith/keith.html">Keith</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="header">
       <h1>FSC HACKATHON</h1>
     </div>
 
-    <div class="face">
+    <!-- <div class="face">
       <img
         src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.T8sZBL6e7dnDLmcWHJ9A8AHaE8%26pid%3DApi&f=1&ipt=3af19421ede87a42abcea61b5d44721b603adaa54702724d686e778f8bf2a056&ipo=images"
         alt="myface"
@@ -36,15 +70,17 @@
       <h2>Keith</h2>
     </div>
 
-    <button id="open-btn">
-      <p>About me</p>
-    </button>
-
     <div id="model-container">
       <div id="model">
         <p>I like to play video games and eat pizza</p>
-
-        <div id="close-btn">&times;</div>
+      </div>
+    </div> -->
+    <div class="center">
+      <div class="card" style="width: 18rem;">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.T8sZBL6e7dnDLmcWHJ9A8AHaE8%26pid%3DApi&f=1&ipt=3af19421ede87a42abcea61b5d44721b603adaa54702724d686e778f8bf2a056&ipo=images" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">I like to play video games and eat pizza</p>
+        </div>
       </div>
     </div>
 
