--- a/Kyoshi/kyoshi.html
+++ b/Kyoshi/kyoshi.html
@@ -47,7 +47,7 @@
     <div class="center">
       <div class="card" style="width: 18rem">
         <img
-          src="/Kyoshi/images/RenderedImage.jpg"
+          src="./images/RenderedImage.jpg"
           class="card-img-top"
           alt="..."
         />
